# sha2cryptlib

./: .gitignore  CMakeAlignmentCheck.cpp  CMakeCheckFunctionMemcpy.c  CMakeCheckFunctionMempcpy.c  CMakeCheckFunctionStpncpy.c  CMakeLists.txt  README.md  sha2cryptLibConfig.h.in
src/: main.cpp  shacrypt.cpp  shacrypt.h
src/general/: portable_endian.h  sha256crypt.c  sha256crypt.h  sha2crypthelper.c  sha2crypthelper.h  sha512crypt.c  sha512crypt.h
src/interface-c/: sha2cryptLibC.h
src/interface-cpp/: sha2cryptLibCpp.cpp  sha2cryptLibCpp.h
src/simple-utility/: main.cpp
src/test-sha256/: testSha256.c
src/test-sha512/: testSha512.c
